# solana-accountsdb-plugin-postgres

./: Cargo.toml
ci/: install-build-deps.sh  rust-version.sh
scripts/: drop_schema.sql  postgresql.conf
