[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-geyser-plugin-postgres"
description = "The Solana AccountsDb plugin for PostgreSQL database."
version = "1.18.26"
repository = "https://github.com/solana-labs/solana-accountsdb-plugin-postgres"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.5.1"
bytemuck = "1.18.0"
chrono = { version = "0.4.38", features = ["serde"] }
crossbeam-channel = "0.5.13"
log = "0.4.22"
openssl = { version = "0.10.66" }
postgres = { version = "0.19.9", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.8", features = ["derive"] }
postgres-openssl = { version = "0.5.0" }
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
solana-geyser-plugin-interface = "1.18.26"
solana-logger = "1.18.26"
solana-measure = "1.18.26"
solana-metrics = "1.18.26"
solana-runtime = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"
thiserror = "1.0.64"
tokio-postgres = "0.7.12"

[dev-dependencies]
libc = "0.2.159"
libloading = "0.8.5"
serial_test = "3.1.1"
socket2 = { version = "0.5.7", features = ["all"] }
solana-account-decoder = "1.18.26"
solana-core = "1.18.26"
solana-local-cluster = "1.18.26"
solana-net-utils = "1.18.26"
solana-streamer = "1.18.26"
tempfile = "3.13.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
